--- a/the-app/.env
+++ b/the-app/.env
@@ -1,4 +1,4 @@
 REACT_APP_FIREBASE_API_KEY = fill me in
-REACT_APP_FIREBASE_MESSAGINGSENDERID = f
+REACT_APP_FIREBASE_MESSAGINGSENDERID = fill me in
 REACT_APP_FIREBASE_APPID = fill me in
 REACT_APP_FIREBASE_MEASUREMENTID = fill me in
